<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChristmasCheer</string>
    <string name="send_cheer_button">Send Christmas Cheer!</string>
    <string name="received_cheer_title">Received Cheer!</string>
    <string name="return_cheer_button">Return The Cheer!</string>
    <string name="decline_return_cheer_button">That\'s Nice!</string>
    <string name="cheer_returned">Cheer Returned!</string>
    <string name="cheer_returned_button">Gee, Thanks!</string>
    <string name="name_prompt">What\'s your name?</string>
    <string name="name_hint">Name</string>
    <string name="name_warning">Are you sure this is the name you want? You won\'t be able to change it later.</string>
    <string name="begin_cheer">Begin sending cheer!</string>
    <string name="confirm_name">Yes this is the name I want!</string>
    <string name="default_name">Santa</string>
    <string name="default_location">The North Pole</string>
    <string name="empty_history">No cheer yet. Try sending some!</string>
    <string name="loading_message">Contacting the North Pole …</string>
    <string name="title_activity_credits">CreditsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="credits_header">Christmas Cheer! wouldn't have been possible without the help of an active and talented open source community! Here's a list of the honorary elves that contributed their work along the way!</string>
    <string name="thanks">Thanks!</string>
    <string name="development">Development</string>
    <string name="logan">Logan Wright</string>
    <string name="logan_credit">Concept, Design, iOS and JS Development, Santa</string>
    <string name="phil">Phil Corriveau</string>
    <string name="phil_credit">Android Development, Grinch</string>
    <string name="icons">Icons</string>
    <string name="icon_monster">IconMonstr</string>
    <string name="icon_monster_credit">IconMonstr.com</string>
    <string name="ploup">Ploup Design</string>
    <string name="ploup_credit">Christmas Special</string>
    <string name="badger">Badger</string>
    <string name="badger_credit">Badger's Christmas</string>
    <string name="fonts">Fonts</string>
    <string name="dave">Dave Lovelace</string>
    <string name="dave_credit">Christmas On Crack</string>
    <string name="sounds">Sounds</string>
    <string name="mike">Mike Koenig</string>
    <string name="mike_credit">Sleigh Bells Ringing Sound</string>
    <string name="canuck">canucklovingbrit</string>
    <string name="canuck_credit">Santa - Ho Ho Ho #2</string>
    <string name="acclivity">acclivity</string>
    <string name="acclivity_credit">Merry Christmas Darling</string>
    <string name="na">n/a</string>
    <string name="na_credit">Santa Claus Says Merry Christmas</string>
    <string name="sean">SeanSecret</string>
    <string name="sean_credit">Failed Laser</string>
    <string name="gabriel">GabrielAraujo</string>
    <string name="gabriel_credit">Powerup / Success</string>
    <string name="libraries">Libraries</string>
    <string name="jeremy">Jeremy Feinstein</string>
    <string name="jeremy_credit">Sliding Menu</string>
    <string name="hdodenhof">hdodenhof</string>
    <string name="hdodenhof_credit">Circle Image View</string>
    <string name="qa">Q &amp; A</string>
    <string name="brandi">Brandi Maxam</string>
    <string name="brandi_credit">Testing &amp; Copy</string>
    <string name="cait">Cait DeMars</string>
    <string name="cait_credit">Testing</string>
    <string name="design">Design</string>
    <string name="kathy">Kathy Chau</string>
    <string name="kathy_credit">Christmas Cheer Green</string>

</resources>
