<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textured_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/credits_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:gravity="center_horizontal"
            android:text="@string/credits_header"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/thanks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/thanks"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/development"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="40dp"
            android:gravity="center_horizontal"
            android:background="@color/christmas_green"
            android:text="@string/development"
            android:textSize="40sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/phil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/phil"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/phil_credit"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/logan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/logan"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/logan_credit"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:background="@color/christmas_green"
            android:text="@string/icons"
            android:textSize="40sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/icon_monster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/icon_monster"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/icon_monster_credit"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/ploup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/ploup"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/ploup_credit"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/badger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/badger"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/badger_credit"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/fonts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:background="@color/christmas_green"
            android:text="@string/fonts"
            android:textSize="40sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/dave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/dave"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/dave_credit"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/sounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:background="@color/christmas_green"
            android:text="@string/sounds"
            android:textSize="40sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/mike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/mike"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/mike_credit"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/canuck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/canuck"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/canuck_credit"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/acclivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/acclivity"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/acclivity_credit"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/na"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/na"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/na_credit"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/sean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/sean"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/sean_credit"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/gabriel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/gabriel"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/gabriel_credit"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/libraries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:background="@color/christmas_green"
            android:text="@string/libraries"
            android:textSize="40sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/jeremy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/jeremy"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/jeremy_credit"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/hdodenhof"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/hdodenhof"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/hdodenhof_credit"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/qa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:background="@color/christmas_green"
            android:text="@string/qa"
            android:textSize="40sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/brandi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/brandi"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/brandi_credit"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/cait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/cait"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/cait_credit"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:background="@color/christmas_green"
            android:text="@string/design"
            android:textSize="40sp"
            android:textColor="@android:color/white"/>

        <TextView
            android:id="@+id/kathy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/kathy"
            android:textSize="28sp"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/kathy_credit"
            android:textColor="@android:color/black"/>

    </LinearLayout>

</ScrollView>
