<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/holo_red_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/name_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/name_prompt"
            android:textSize="40sp"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="6dp"
            android:gravity="center_horizontal"
            android:background="@android:color/white"
            android:textSize="28sp"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/darker_gray"
            android:hint="@string/name_hint"/>

    </LinearLayout>

    <Button
        android:id="@+id/begin_cheer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_bg"
        android:text="@string/begin_cheer"
        android:textColor="@android:color/white"
        android:textSize="28sp"
        android:textAllCaps="false"/>

</RelativeLayout>